# pre-commit-hooks

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .releaserc  CHANGELOG.md  Makefile  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: main_branch.yml  pull_request.yml  python-app.yml
hooks/: branch_name.py  commit_msg.py  terraform_lint.py  util.py
test/: test_branch_name.py  test_commit_msg.py  test_util.py
test/resources/: correct_commit_msg-01.txt  correct_commit_msg-02.txt  correct_commit_msg-03.txt  incorrect_commit_msg-01.txt  incorrect_commit_msg-02.txt  test_white_commit.txt
