[metadata]
name = pre-commit-hooks
version = v1.0.1
author = Liber
author_email = leandro.greijal@libercapital.com.br
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5.1
version = 1

[options.entry_points]
console_scripts =
  commit_msg = hooks.commit_msg:main
  branch_name = hooks.branch_name:main


[options.packages.find]
exclude = py
          test*

[tool:pytest]
testpaths =
  test
